infra/configs/flux-system/ingress-webhook.yaml
# https://fluxcd.io/flux/guides/webhook-receivers/
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    cert-manager.io/cluster-issuer: le-prod
spec:
  ingressClassName: external
  rules:
  - host: flux.anchorlytics.ca
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
  tls:
  - hosts:
    - flux.anchorlytics.ca
    secretName: webhook-tls
